--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,10 @@ environment:
   sdk: ^3.8.1
 
 dependencies:
+  envied: ^1.2.0
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.6.1
   google_sign_in: ^7.1.1
   supabase_flutter: ^2.9.1
 
@@ -16,6 +18,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  envied_generator: ^1.2.0
+  build_runner: ^2.6.0
 
 flutter:
   uses-material-design: true
