--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: we_budget
-description: "A new Flutter project."
+description: "A shared budget tracking app"
 publish_to: 'none'
 version: 0.1.0
 
@@ -11,15 +11,20 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.6.1
+  freezed: ^3.1.0
+  go_router: ^16.0.0
   google_sign_in: ^7.1.1
   supabase_flutter: ^2.9.1
+  riverpod_annotation: ^2.6.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-  envied_generator: ^1.2.0
-  build_runner: ^2.6.0
+  riverpod_generator: ^2.6.5
+  build_runner: ^2.5.4
+  envied_generator: ^1.1.1
+  json_serializable: ^6.9.5
 
 flutter:
   uses-material-design: true
