--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   google_sign_in: ^7.1.1
   supabase_flutter: ^2.9.1
   riverpod_annotation: ^2.6.1
+  gap: ^3.0.1
+  json_serializable: ^6.9.5
 
 dev_dependencies:
   flutter_test:
@@ -24,7 +26,6 @@ dev_dependencies:
   riverpod_generator: ^2.6.5
   build_runner: ^2.5.4
   envied_generator: ^1.1.1
-  json_serializable: ^6.9.5
 
 flutter:
   uses-material-design: true
