--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   riverpod_annotation: ^2.6.1
   gap: ^3.0.1
   json_serializable: ^6.9.5
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
@@ -29,3 +30,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+  - lib/assets/
