- Updates on adding budget bottom sheets - Enable deleting and updating budget - Create button to add budget or expenses - Create simple settings screen - Basic POC for showing budget details - Update text theme on text field inputs and color schemes - Create maybeEq extension for supabase db client - Create business functions on budget model - Sliding view for budget and expenses at glance

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   gap: ^3.0.1
   json_serializable: ^6.9.5
   intl: ^0.20.2
+  json_annotation: ^4.9.0
+  flutter_form_builder: ^10.1.0
 
 dev_dependencies:
   flutter_test:
