--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   intl: ^0.20.2
   json_annotation: ^4.9.0
   flutter_form_builder: ^10.1.0
+  form_builder_validators: ^11.2.0
 
 dev_dependencies:
   flutter_test:
